markedup and styled as well as media querries

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 
 <div class="container">
-  <div class="navbar">
+  <header class="navigation">
     <div class="nav">
       <a href="#">Services</a>
       <a href="#">Product</a>
@@ -26,21 +26,21 @@
      <div class="logo">
        <img src="img/logo.png">
      </div>
-  </div>
-     <header class="header-text">
-       <div>
-         <h1>INNOVATION 
-             ON
+    </header>
+   <section class="header-section">
+    <div class="header-text">
+         <h1>INNOVATION <br>
+             ON <br>
         DEMAND</h1>
-        <div>Get Started</div>
-       </div>
+        <button>Get Started</button>
+     </div>
        
        <div class="header-image">
          <img src="img/header-img.png" alt="global network"> 
        </div>
+  </section>
 
-
-     </header>
+     
      <section class="top-content">
        <div>
          <h3>Features</h3>
@@ -55,7 +55,7 @@
           Eos ea ullum mundi eirmod. Nibh melius splendide est ea, utinam recusabo no eam, quando vivendo in duo. Option ullamcorper interpretaris mei ea. Mel everti impetus cu, quod putant at sea. Nam at nihil vituperatoribus. </p>
        </div>
      </section>
-     <section class="mid-page-content">
+     <section class="mid-page-image">
        <img src="img/mid-page-accent.jpg" alt="network">
      </section>
      <section class="bottom-content">
@@ -76,15 +76,15 @@
      </section>
       <address>
         <h3>Contact</h3>
-        123 Way 456 Street
-        Somewhere, USA
-        1888 888 8888
+        123 Way 456 Street<br>
+        Somewhere, USA<br>
+        1888 888 8888<br>
         sales@greatidea.io
       </address>
       <footer>Copyright Great Idea! 2019 </footer>
 
 
-  </div>
+  
 
 
 
