--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <a href="#">Contact</a>
     </div>
      <div class="logo">
-       <img src="img/logo.png">
+       <img class="logo" src="img/logo.png">
      </div>
     </header>
-   <section class="header-section">
-    <div class="header-text">
+<section class="header-section">
+    <div class="header-item">
          <h1>INNOVATION <br>
              ON <br>
         DEMAND</h1>
@@ -42,13 +42,13 @@
 
      
      <section class="top-content">
-       <div>
+       <div class="content-top">
          <h3>Features</h3>
          <p>Lorem ipsum dolor sit amet, no vel iuvaret indoctum. At pri accusata contentiones, suavitate deseruisse has in, no eirmod argumentum ius. Mea esse persecuti no. Ad saepe ancillae consulatu eam, consul accusam tacimates vix id. Iusto tation dignissim id pro, usu ne amet sint unum.
 
           Eos ea ullum mundi eirmod. Nibh melius splendide est ea, utinam recusabo no eam, quando vivendo in duo. Option ullamcorper interpretaris mei ea. Mel everti impetus cu, quod putant at sea. Nam at nihil vituperatoribus. </p>
        </div>
-       <div> 
+       <div class="content-top"> 
          <h3>About</h3>
          <p> Lorem ipsum dolor sit amet, no vel iuvaret indoctum. At pri accusata contentiones, suavitate deseruisse has in, no eirmod argumentum ius. Mea esse persecuti no. Ad saepe ancillae consulatu eam, consul accusam tacimates vix id. Iusto tation dignissim id pro, usu ne amet sint unum.
 
@@ -59,17 +59,17 @@
        <img src="img/mid-page-accent.jpg" alt="network">
      </section>
      <section class="bottom-content">
-       <div>
+       <div class="content-bottom">
          <h3>Services</h3>
          <p>Lorem ipsum dolor sit amet, no vel iuvaret indoctum. At pri accusata contentiones, suavitate deseruisse has in, no eirmod argumentum ius. Mea esse persecuti no. Ad saepe ancillae consulatu eam, consul accusam tacimates vix id. Iusto tation dignissim id pro, usu ne amet sint unum.
 
           Eos ea ullum mundi eirmod. Nibh melius splendide est ea, utinam recusabo no eam, quando vivendo in duo. Option ullamcorper interpretaris mei ea. Mel everti impetus cu, quod putant at sea. Nam at nihil vituperatoribus. </p>
        </div>
-       <div>
+       <div class="content-bottom">
          <h3>Product</h3>
          <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum </p>
        </div>
-       <div>
+       <div class="content-bottom">
          <h3>Vision</h3>
          <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum </p>
        </div>
