made more changes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+     <div id="wrapper">
 
-<div class="container">
   <header class="navigation">
     <div class="nav">
       <a href="#">Services</a>
@@ -27,7 +27,7 @@
        <img class="logo" src="img/logo.png">
      </div>
     </header>
-<section class="header-section">
+  <section class="header-section">
     <div class="header-item">
          <h1>INNOVATION <br>
              ON <br>
@@ -84,13 +84,7 @@
       <footer>Copyright Great Idea! 2019 </footer>
 
 
-  
-
-
-
-
-</div>
-
+    </div>  <!--End Wrapper-->
 
 </body>
 </html>
